--- a/css/hover_circles/style6.css
+++ b/css/hover_circles/style6.css
@@ -106,28 +106,23 @@
 	padding: 10px 5px;
 	font-style: italic;
 	margin: 0 30px;
-	font-size: 12px;
+	font-size: 14px;
 	border-top: 1px solid rgba(255,255,255,0.5);
 }
 
 .ch-info p a {
 	display: block;
 	color: #fff;
-	color: rgba(255,255,255,0.7);
-	font-style: normal;
-	font-weight: 700;
-	text-transform: uppercase;
-	font-size: 9px;
+	color: rgba(255,255,255);
+	font-style: italic;
+	font-size: 15px;
 	letter-spacing: 1px;
 	padding-top: 4px;
-	font-family: 'Open Sans', Arial, sans-serif;
 }
 
 .ch-info p a:hover {
-	color: #fff222;
-	color: rgba(255,242,34, 0.8);
+	color: rgba(255,0,0, 0.7);
 }
-
 
 .ch-item:hover .ch-info-front {
 	-webkit-transform: rotate3d(1,0,0,-180deg);
